<resources>
    <string name="app_name">E-contact</string>
    <string name="utilities">Public utilities</string>
    <string name="description_text">
        When viewed in an inertial reference frame, an object either remains at rest or continues to move at a constant velocity, unless acted upon by a force.
    </string>
    <string name="created_text">Created</string>
    <string name="registered_text">Registered</string>
    <string name="assigned_text">Assigned</string>
    <string name="responsible_text">Responsible</string>
    <string name="responsible_name">Dnipropetrovsk MVK</string>
    <string name="created_date">25 december 2016</string>
    <string name="registered_date">26 december 2016</string>
    <string name="assigned_date">29 december 2016</string>

    <string name="drawer_title">@string/app_name</string>
    <string name="drawer_item_all">All appeals</string>
    <string name="drawer_item_map">Appeals on a map</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_footer_links">Made with love\n<a href="http://www.itruh.dp.ua/">IT Ruh Dnipro</a> and <a href="https://yalantis.com/">Yalantis</a></string>
    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_sort_all">All appeals</string>
    <string name="type_public">Public utilities</string>
    <string name="type_building">Building</string>
    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="waiting">Waiting</string>
    <string name="dateFormat">dd MMMM yyyy</string>

    <string name="facebook_app_id">519888558197341</string>

    <string name="appeal_id">Appeal id: </string>
    <string name="check_internet">Check your internet connection</string>
    <string name="facebook_login">You have to login first</string>

</resources>
