<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="7dp"
                    android:text="@string/utilities" />

                <!--[Comment] Hardcode -->

                <TextView
                    android:id="@+id/statusTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/titleTv"
                    android:background="@drawable/oval"
                    android:paddingBottom="@dimen/status_text_view_vertical_padding"
                    android:paddingLeft="@dimen/status_text_view_horizontal_padding"
                    android:paddingRight="@dimen/status_text_view_horizontal_padding"
                    android:paddingTop="@dimen/status_text_view_vertical_padding"
                    android:text="@string/status"
                    android:textColor="@color/white" />

                <!-- [Comment] Padding hardcode, color hardcode DONE-->

                <View
                    android:id="@+id/view"
                    style="@style/View"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/statusTv" />

                <TextView
                    android:id="@+id/createdTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:onClick="showToast"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view"
                    android:text="@string/created_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/createdDateTv"
                    style="@style/TaskDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/view"
                    android:layout_alignRight="@+id/view"
                    android:layout_alignTop="@+id/createdTv"
                    android:text="@string/created_date" />

                <View
                    android:id="@+id/view2"
                    style="@style/View"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/createdTv" />

                <TextView
                    android:id="@+id/registeredTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view2"
                    android:text="@string/registered_text" />

                <TextView
                    android:id="@+id/registeredDateTv"
                    style="@style/TaskDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/registeredTv"
                    android:text="@string/registered_date" />

                <View
                    android:id="@+id/view3"
                    style="@style/View"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/registeredTv"
                    android:background="#e7e7e7" />

                <TextView
                    android:id="@+id/assignedTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view3"
                    android:text="@string/assigned_text" />

                <TextView
                    android:id="@+id/assignedDateTv"
                    style="@style/TaskDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/assignedTv"
                    android:text="@string/assigned_date" />

                <View
                    android:id="@+id/view4"
                    style="@style/View"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/assignedTv" />

                <TextView
                    android:id="@+id/responsibleTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/view4"
                    android:text="@string/responsible_text" />

                <TextView
                    android:id="@+id/responsibleNameTv"
                    style="@style/TaskDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/responsibleTv"
                    android:text="@string/responsible_name" />

                <View
                    android:id="@+id/view5"
                    style="@style/View"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/responsibleTv" />

                <TextView
                    android:id="@+id/descriptionTv"
                    style="@style/TaskNames"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view5"
                    android:text="@string/description_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionTv">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/recycler_minHeight"
                        android:scrollbars="horizontal" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
